--- a/angular.json
+++ b/angular.json
@@ -34,10 +34,14 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/animate.css/animate.min.css",
               "node_modules/aos/dist/aos.css",
+              "node_modules/quill/dist/quill.core.css", 
+              "node_modules/quill/dist/quill.snow.css",
               "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/aos/dist/aos.js"
+              "node_modules/aos/dist/aos.js",
+              "node_modules/quill/dist/quill.js"
+              
             ]
           },
           "configurations": {
