--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aos": "^2.3.4",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.4",
+    "quill": "^1.3.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
