--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "animate.css": "^3.7.2",
     "aos": "^2.3.4",
     "primeicons": "^2.0.0",
-    "primeng": "^9.0.0-rc.4",
+    "primeng": "^9.0.0",
     "quill": "^1.3.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
