--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/primeng/resources/themes/nova-light/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css",
               "node_modules/animate.css/animate.min.css",
               "node_modules/aos/dist/aos.css",
               "node_modules/quill/dist/quill.core.css", 
