--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^5.12.1",
     "animate.css": "^3.7.2",
     "aos": "^2.3.4",
+    "primeflex": "^1.0.0",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0",
     "quill": "^1.3.7",
