--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,7 @@
               "node_modules/aos/dist/aos.css",
               "node_modules/quill/dist/quill.core.css", 
               "node_modules/quill/dist/quill.snow.css",
+              "node_modules/alertifyjs/build/css/alertify.min.css",
               "src/styles.scss"
             ],
             "scripts": [
