--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~9.0.4",
     "@angular/router": "~9.0.4",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "alertifyjs": "^1.13.1",
     "animate.css": "^3.7.2",
     "aos": "^2.3.4",
     "jwt-decode": "^2.2.0",
