--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "primeng": "^9.0.0",
     "quill": "^1.3.7",
     "rxjs": "~6.5.4",
+    "shortid": "^2.2.15",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
