--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "alertifyjs": "^1.13.1",
     "animate.css": "^3.7.2",
     "aos": "^2.3.4",
+    "chart.js": "^2.9.3",
     "jwt-decode": "^2.2.0",
     "primeflex": "^1.0.0",
     "primeicons": "^2.0.0",
@@ -45,7 +46,7 @@
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
