--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
               "node_modules/primeng/resources/themes/nova-light/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeflex/primeflex.css",
+              "node_modules/video.js/dist/video-js.min.css",
               "node_modules/animate.css/animate.min.css",
               "node_modules/aos/dist/aos.css",
               "node_modules/quill/dist/quill.core.css", 
@@ -41,6 +42,7 @@
               "src/styles.scss"
             ],
             "scripts": [
+              "node_modules/video.js/dist/video.min.js",
               "node_modules/chart.js/dist/Chart.js",
               "node_modules/aos/dist/aos.js",
               "node_modules/quill/dist/quill.js",
