--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser-dynamic": "~9.0.4",
     "@angular/router": "~9.0.4",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@tinkoff/ng-dompurify": "^2.2.0",
     "alertifyjs": "^1.13.1",
     "animate.css": "^3.7.2",
     "aos": "^2.3.4",
     "chart.js": "^2.9.3",
+    "dompurify": "^2.0.11",
     "jwt-decode": "^2.2.0",
     "primeflex": "^1.0.0",
     "primeicons": "^2.0.0",
